--- a/english-cv.tex
+++ b/english-cv.tex
@@ -171,6 +171,14 @@ development approaches the designing and writing of software using executable sp
 that can be written by developers, business analysts and quality assurance together, to create
 a common language that helps different people communicate with each other.\\ Authors: Tuukka \textsc{Turto}}
 
+\NewEntry{Sep 2013}{Programming Can Be Fun with Hy}
+
+\Description{\MarginText{Open Source For You}An introductionary article showing
+how to get started with Hy programming language. Hy is a Lisp implementation
+that has been written in Python. It allows developers to write their programs
+using strong functional capabilities of Hy while leveraging the vast libraries
+of Python.\\ Authors: Tuukka \textsc{Turto}}
+
 %------------------------------------------------
 
 %------------------------------------------------
