--- a/finnish-cv.tex
+++ b/finnish-cv.tex
@@ -199,6 +199,15 @@ Artikkelissa kuvataan BDD:n perusteet k\"{a}yt\"{a}nn\"{o}n n\"{a}k\"{o}kulmasta
 samalla kun kirjoitetaan lyhyt esimerkkiohjelma.
 \\ Kirjoittajat: Tuukka \textsc{Turto}}
 
+\NewEntry{Syyskuu 2013}{Programming Can Be Fun with Hy}
+
+\Description{\MarginText{Open Source For You}Artikkeli Hy-kielen alkeista. Hy
+on Pythonilla kirjoitettu Lisp-toteutus, joka mahdollistaa saumattoman
+integraation molempiin suuntiin. Kielen avulla voi kirjoittaa funktionaalista
+koodia, samalla hy\"{o}dynt\"{a}en Pythonin laajaa moduulikirjastoa.
+\\ Kirjoittajat: Tuukka \textsc{Turto}}
+
+
 %------------------------------------------------
 
 %------------------------------------------------
