added django and dart

--- a/english-cv.tex
+++ b/english-cv.tex
@@ -192,7 +192,7 @@ of Python.\\ Authors: Tuukka \textsc{Turto}}
 \spacedlowsmallcaps{Computer Skills}\vspace{1em}
 
 \Description{\MarginText{Basics}\textsc{Functional programming} (Hy,
-Clojure)}
+Clojure), web development (Django, Dart)}
 
 \Description{\MarginText{Intermediate}\textsc{Continuous integration} (TeamCity, Travis CI), 
 distributed version control (Git), centralised version control (SVN,
