--- a/finnish-cv.tex
+++ b/finnish-cv.tex
@@ -221,7 +221,7 @@ koodia, samalla hy\"{o}dynt\"{a}en Pythonin laajaa moduulikirjastoa.
 \spacedlowsmallcaps{Taidot}\vspace{1em}
 
 \Description{\MarginText{Perusteet}\textsc{Funktionaalinen ohjelmointi} (Hy,
-Clojure)}
+Clojure), Web-ohjelmointi (Django, Dart)}
 
 \Description{\MarginText{Jatko}\textsc{Jatkuva integraatio} (TeamCity, Travis CI), 
 Hajautettu versionhallinta (Git), Keskitetty versionhallinta (SVN,
