updated new article and employer information

--- a/english-cv.tex
+++ b/english-cv.tex
@@ -80,7 +80,12 @@
 
 \noindent\spacedlowsmallcaps{Work Experience}\vspace{1em}
 
-\NewEntry{2010--present}{Systems Architect, \textsc{Digia}}
+\NewEntry{Dec 2013--}{Senior Software Developer, \textsc{Tieto}}
+
+\Description{\MarginText{Tieto Healthcare \& Welfare}Design, development and testing of new features
+for medical software systems.}
+
+\NewEntry{2010--Nov 2013}{Systems Architect, \textsc{Digia}}
 
 \Description{\MarginText{Digia}Specification, design, development and testing of new features for a 
 business critical financial system written with .Net; evaluating new tools and technologies and making
@@ -130,7 +135,7 @@ implementation (Oracle and Microsoft SQL Server).}
 
 %------------------------------------------------
 
-\NewEntry{2011--2013 (projected)}{Jyv\"{a}skyl\"{a} University of Applied Sciences}
+\NewEntry{2011--2014 (projected)}{Jyv\"{a}skyl\"{a} University of Applied Sciences}
 
 \Description{\MarginText{Master of Engineering}School of Technology\newline 
 Thesis: \textit{Automated Testing Performed by Developers}\newline
@@ -178,6 +183,11 @@ how to get started with Hy programming language. Hy is a Lisp implementation
 that has been written in Python. It allows developers to write their programs
 using strong functional capabilities of Hy while leveraging the vast libraries
 of Python.\\ Authors: Tuukka \textsc{Turto}}
+
+\NewEntry{Feb 2013}{Top 5 Tools for Writing a Thesis}
+
+\Description{\MarginText{Open Source For You}A short article showcasing 5 tools for writing a thesis.\\
+Authors: Tuukka \textsc{Turto}}
 
 %------------------------------------------------
 
