--- a/finnish-cv.tex
+++ b/finnish-cv.tex
@@ -95,7 +95,12 @@
 
 \noindent\spacedlowsmallcaps{Ty\"{o}kokemnus}\vspace{1em}
 
-\NewEntry{2010--}{Systems Architect, \textsc{Digia}}
+\NewEntry{joulu 2013--}{Senior Software Developer, \textsc{Tieto}}
+
+\Description{\MarginText{Tieto Healthcare \& Welfare}L\"{a}\"{a}ketieteen kuvantamisj\"{a}rjestelmien suunnittelu-,
+kehitys- ja testausteht\"{a}v\"{a}t.}
+
+\NewEntry{2010--marras 2013}{Systems Architect, \textsc{Digia}}
 
 % \Description{\MarginText{Digia}Specification, design, development and testing of new features for a business critical financial system written with .Net; evaluating new tools and technologies and making proof of concept demos; architectual responsibility for trade and order management, including integration to external systems; working as a scrum master.}
 
@@ -157,7 +162,7 @@ tietokannan taaksep\"{a}inmallinnus (Oracle ja Microsoft SQL Server).}
 
 %------------------------------------------------
 
-\NewEntry{2011--2013 (arvioitu)}{Jyv\"{a}skyl\"{a}n ammattikorkeakoulu}
+\NewEntry{2011--2014 (arvioitu)}{Jyv\"{a}skyl\"{a}n ammattikorkeakoulu}
 
 \Description{\MarginText{Master of Engineering}Tekniikka ja liikenne\newline 
 Lopputy\"{o}: \textit{Automated Testing Performed by Developers}\newline
@@ -205,6 +210,12 @@ samalla kun kirjoitetaan lyhyt esimerkkiohjelma.
 on Pythonilla kirjoitettu Lisp-toteutus, joka mahdollistaa saumattoman
 integraation molempiin suuntiin. Kielen avulla voi kirjoittaa funktionaalista
 koodia, samalla hy\"{o}dynt\"{a}en Pythonin laajaa moduulikirjastoa.
+\\ Kirjoittajat: Tuukka \textsc{Turto}}
+
+\NewEntry{Helmikuu 2014}{Top 5 Tools for Writing a Thesis}
+
+\Description{\MarginText{Open Source For You}Viisi erilaista lopputy\"{o}n
+kirjoittamiseen sopivaa ty\"{o}kalua esittelev\"{a} artikkeli.
 \\ Kirjoittajat: Tuukka \textsc{Turto}}
 
 
