--- a/english-cv.tex
+++ b/english-cv.tex
@@ -135,7 +135,7 @@ implementation (Oracle and Microsoft SQL Server).}
 
 %------------------------------------------------
 
-\NewEntry{2011--2014 (projected)}{Jyv\"{a}skyl\"{a} University of Applied Sciences}
+\NewEntry{2011--2014}{Jyv\"{a}skyl\"{a} University of Applied Sciences}
 
 \Description{\MarginText{Master of Engineering}School of Technology\newline 
 Thesis: \textit{Automated Testing Performed by Developers}\newline
