--- a/finnish-cv.tex
+++ b/finnish-cv.tex
@@ -162,7 +162,7 @@ tietokannan taaksep\"{a}inmallinnus (Oracle ja Microsoft SQL Server).}
 
 %------------------------------------------------
 
-\NewEntry{2011--2014 (arvioitu)}{Jyv\"{a}skyl\"{a}n ammattikorkeakoulu}
+\NewEntry{2011--2014}{Jyv\"{a}skyl\"{a}n ammattikorkeakoulu}
 
 \Description{\MarginText{Master of Engineering}Tekniikka ja liikenne\newline 
 Lopputy\"{o}: \textit{Automated Testing Performed by Developers}\newline
