--- a/english-cv.tex
+++ b/english-cv.tex
@@ -80,12 +80,16 @@
 
 \noindent\spacedlowsmallcaps{Work Experience}\vspace{1em}
 
-\NewEntry{Dec 2013--}{Senior Software Developer, \textsc{Tieto}}
+\NewEntry {May 2017--}{Systems Architect, \textsc{Adafy}}
+
+\Description{\MarginText{Adafy} }
+
+\NewEntry{2013--2017}{Senior Software Developer, \textsc{Tieto}}
 
 \Description{\MarginText{Tieto Healthcare \& Welfare}Design, development and testing of new features
-for medical software systems.}
+for medical imaging software systems.}
 
-\NewEntry{2010--Nov 2013}{Systems Architect, \textsc{Digia}}
+\NewEntry{2010--2013}{Systems Architect, \textsc{Digia}}
 
 \Description{\MarginText{Digia}Specification, design, development and testing of new features for a 
 business critical financial system written with .Net; evaluating new tools and technologies and making
@@ -126,6 +130,8 @@ implementation (Oracle and Microsoft SQL Server).}
 %------------------------------------------------
 
 \vspace{1em} % Extra space between major sections
+
+\newpage
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -202,12 +208,12 @@ Authors: Tuukka \textsc{Turto}}
 \spacedlowsmallcaps{Computer Skills}\vspace{1em}
 
 \Description{\MarginText{Basics}\textsc{Functional programming} (Hy,
-Clojure), web development (Django, Dart)}
+Clojure, Haskell), web development (Django, Dart)}
 
 \Description{\MarginText{Intermediate}\textsc{Continuous integration} (TeamCity, Travis CI), 
 distributed version control (Git), centralised version control (SVN,
-CM/Synergy), relational databases (SqlServer, Oracle, SQLite), user interfaces
-(WinForms, PyQt, curses)}
+CM/Synergy, TFS), relational databases (SqlServer, Oracle, SQLite), user interfaces
+(WinForms, WPF, PyQt, curses)}
 
 \Description{\MarginText{Expert}\textsc{Object oriented programming} (VB.Net, Python,
 C\#, Java), test automation (NUnit, JUnit, nose, behave, PyHamcrest,
@@ -223,7 +229,7 @@ mockito-python, NSubstitute)}
 
 \spacedlowsmallcaps{Other Information}\vspace{1em}
 
-\Description{\MarginText{Muut projektit}2010--\ \ $\cdotp$\ \ \href{https://github.com/tuturto/pyherc}{pyherc},
+\Description{\MarginText{Other projects}2010--\ \ $\cdotp$\ \ \href{https://github.com/tuturto/pyherc}{pyherc},
 Rogue-like dungeon adventure (Python 3, Hy ja PyQt)}
 
 \vspace{-0.5em} % Negative vertical space to counteract the vertical space between every \Description command
@@ -231,6 +237,8 @@ Rogue-like dungeon adventure (Python 3, Hy ja PyQt)}
 \Description{2013--\ \ $\cdotp$\ \ \href{https://github.com/hylang/hy}{Hy}, Lisp implementation in Python.}
 
 %------------------------------------------------
+
+\newpage
 
 \vspace{1em}
 
