--- a/finnish-cv.tex
+++ b/finnish-cv.tex
@@ -75,7 +75,7 @@
 {http://www.linkedin.com/in/tuukkaturto/}}
 % Personal website
 
-\NewEntry{puhelin}{+358 (0)44 556 5984\ \ }
+\NewEntry{puhelin}{+358 (0)40 630 7192\ \ }
 % Phone number(s)
 
 \vspace{1em} 
@@ -95,12 +95,16 @@
 
 \noindent\spacedlowsmallcaps{Ty\"{o}kokemnus}\vspace{1em}
 
-\NewEntry{joulu 2013--}{Senior Software Developer, \textsc{Tieto}}
+\NewEntry {Touko 2017--}{Systems Architect, \textsc{Adafy}}
+
+\Description{\MarginText{Adafy} }
+
+\NewEntry{2013--2017}{Senior Software Developer, \textsc{Tieto}}
 
 \Description{\MarginText{Tieto Healthcare \& Welfare}L\"{a}\"{a}ketieteen kuvantamisj\"{a}rjestelmien suunnittelu-,
 kehitys- ja testausteht\"{a}v\"{a}t.}
 
-\NewEntry{2010--marras 2013}{Systems Architect, \textsc{Digia}}
+\NewEntry{2010--2013}{Systems Architect, \textsc{Digia}}
 
 % \Description{\MarginText{Digia}Specification, design, development and testing of new features for a business critical financial system written with .Net; evaluating new tools and technologies and making proof of concept demos; architectual responsibility for trade and order management, including integration to external systems; working as a scrum master.}
 
@@ -149,6 +153,8 @@ tekninen tuki tiimille; vaatimuksien ker\"{a}\"{a}minen ja analysointi; ohjelmoi
 \Description{\MarginText{Samstock}Yksitt\"{a}isten komponenttien suunnittelu,
 toteutus ja testaus n-tier j\"{a}rjestelm\"{a}ss\"{a} VB.Net ohjelmointikielell\"{a};
 tietokannan taaksep\"{a}inmallinnus (Oracle ja Microsoft SQL Server).}
+
+\newpage
 
 %------------------------------------------------
 
@@ -231,29 +237,17 @@ kirjoittamiseen sopivaa ty\"{o}kalua esittelev\"{a} artikkeli.
 
 \spacedlowsmallcaps{Taidot}\vspace{1em}
 
-\Description{\MarginText{Perusteet}\textsc{Funktionaalinen ohjelmointi} (Hy,
-Clojure), Web-ohjelmointi (Django, Dart)}
+\Description{\MarginText{Perusteet}\textsc{Functio-ohjelmointi} (Hy,
+Clojure, Haskell), web kehitys (Django, Dart)}
 
 \Description{\MarginText{Jatko}\textsc{Jatkuva integraatio} (TeamCity, Travis CI), 
-Hajautettu versionhallinta (Git), Keskitetty versionhallinta (SVN,
-CM/Synergy), Relaatiotietokannat (SqlServer, Oracle, SQLite), K\"{a}ytt\"{o}liittym\"{a}t
-(WinForms, PyQt, curses)}
+hajautettu versionhallinta (Git), keskitetty versionhallinta (SVN,
+CM/Synergy, TFS), relaatiokannat (SqlServer, Oracle, SQLite), käyttöliittymät
+(WinForms, WPF, PyQt, curses)}
 
 \Description{\MarginText{Asiantuntija}\textsc{Olio-ohjelmointi} (VB.Net, Python,
-C\#, Java), Testausautomaatio (NUnit, JUnit, nose, behave, PyHamcrest,
+C\#, Java), testi automaatio (NUnit, JUnit, nose, behave, PyHamcrest,
 mockito-python, NSubstitute)}
-
-% Funktionaalinen ohjelmointi (Hy, Clojure)
-
-% Relaatiotietokannat (SqlServer, Oracle, SQLite)
-% Hajautettu versionhallinta (Git)
-% Keskitetty versionhallinta (SVN, CM/Synergy)
-% Jatkuva integraatio (TeamCity, Travis CI)
-% Kayttoliittymat (WinForms, PyQt, curses)
-
-% Olio-ohjelmointi (VB.Net, Python, C#, Java)
-% Testiautomaatio (NUnit, JUnit, nose, behave, PyHamcrest, mockito-python,
-% NSubstitute)
 
 %------------------------------------------------
 
@@ -262,6 +256,8 @@ mockito-python, NSubstitute)}
 %------------------------------------------------------------------------------
 %	OTHER INFORMATION
 %------------------------------------------------------------------------------
+
+\newpage
 
 \spacedlowsmallcaps{Muut tiedot}\vspace{1em}
 
